<resources>
    <string name="app_name">Sus</string>
    <string name="subscription_name_hint">Subscription Name</string>
    <string name="subscription_description_hint">Subscription description</string>
    <string name="subscription_cost_hint">Subscription Cost</string>
    <string name="subscription_dateFormat_hint">click to select a date</string>
    <string name="button_text">Save</string>
    <string name="string_button_text">Save</string>
    <string name="close">Close</string>
    <string name="add_a_new_subscription">Tap to add a new subscription</string>
    <string name="todo">arrow pointing to the add button</string>
    <string name="tap_subscription_to_edit">Tap a subscription to edit it</string>
    <string name="subscription_arrow_description">Arrow pointing to subscription</string>
    <string name="menu_cancel_text">cancel</string>
    <string name="action_settings">settings</string>
    <string name="add_subscription">Adds a new subscription</string>
    <string name="title_activity_sub_graph">subGraph</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="delete_button">Delete</string>
    <string name="main_menu_title">Supervise ur Subscriptions</string>
    <string name="main_menu_header">SUS</string>
    <string name="upcoming_payments">Upcoming payments</string>
    <string name="your_spending">Your Spending</string>
    <string name="monthly_spending">Monthly Spending:</string>
    <string name="monthly_dollar">$99.00</string>
    <string name="six_month_spending">Six Month Spending:</string>
    <string name="six_month_amount">$99.00</string>
    <string name="yearly_spending">Yearly Spending:</string>
    <string name="yearly_amount">$99.00</string>
    <string name="notification_question">Do you want to be notified when this payment is due?</string>
    <string name="order_by_name">Order by Name</string>
    <string name="order_by_price">Order by Price</string>
    <string name="order_by_date">Order by Date</string>
    <string name="pay">PAY</string>
</resources>