<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.cvtc.itCapstone.sus.MainActivity">
    <item
        android:id="@+id/action_name"
        android:orderInCategory="150"
        android:title="@string/order_by_name"
        android:icon="@drawable/ic_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_price"
        android:orderInCategory="100"
        android:title="@string/order_by_price"
        android:icon="@drawable/ic_price"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_date"
        android:orderInCategory="10"
        android:title="@string/order_by_date"
        android:icon="@drawable/ic_date"
        app:showAsAction="ifRoom" />
</menu>