<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3468EC"
    tools:context=".AddSub">

    <!-- Subscription name text entry   -->
    <EditText
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/subscription_name_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="#E3E8E5"
        android:textColorHint="#E3E8E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Subscription description text entry   -->
    <EditText
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/subscription_description_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="#E3E8E5"
        android:textColorHint="#E3E8E5"
        app:layout_constraintEnd_toEndOf="@+id/text_name"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <!-- Subscription cost text entry   -->
    <EditText
        android:id="@+id/text_cost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="200dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/subscription_cost_hint"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColor="#E3E8E5"
        android:textColorHint="#E3E8E5"
        app:layout_constraintEnd_toEndOf="@+id/text_description"
        app:layout_constraintStart_toStartOf="@+id/text_description"
        app:layout_constraintTop_toBottomOf="@+id/text_description" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="175dp"
        android:layout_height="52dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_cost"
        app:layout_constraintTop_toBottomOf="@+id/text_description" />

    <!-- Subscription date text entry   -->
    <EditText
        android:id="@+id/text_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/subscription_dateFormat_hint"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textColor="#E3E8E5"
        android:textColorHint="#E3E8E5"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="@+id/text_cost"
        app:layout_constraintStart_toStartOf="@+id/text_cost"
        app:layout_constraintTop_toBottomOf="@+id/text_cost" />

    <!-- Notification checkbox   -->
    <CheckBox
        android:id="@+id/cbx_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/notification_question"
        android:textColor="#E3E8E5"
        android:buttonTint="#E3E8E5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_date" />

    <!-- Save button  -->
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/string_button_text"
        app:layout_constraintEnd_toEndOf="@+id/text_date"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/text_date"
        app:layout_constraintTop_toBottomOf="@+id/cbx_notification" />

    <!--  Delete button  -->
    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:onClick="deleteSubscription"
        app:layout_constraintEnd_toEndOf="@+id/text_date"
        app:layout_constraintStart_toStartOf="@+id/text_date"
        app:layout_constraintTop_toBottomOf="@+id/button_save" />

    <Button
        android:id="@+id/button_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/pay"
        android:visibility="invisible"
        android:onClick="playSubscription"
        app:layout_constraintEnd_toEndOf="@+id/cbx_notification"
        app:layout_constraintStart_toEndOf="@+id/text_date"
        app:layout_constraintTop_toBottomOf="@+id/cbx_notification" />
</androidx.constraintlayout.widget.ConstraintLayout>
