<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.Light">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@color/cardview_light_background" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_sub" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginEnd="355dp"
        android:layout_marginBottom="675dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/design_default_color_primary"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/OverlayPageOne"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".6"
        android:background="@color/black"
        android:textAlignment="center"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="165dp"
            android:layout_height="45dp"
            android:layout_above="@+id/imageView2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="0dp"
            android:text="@string/add_a_new_subscription"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="70dp"
            android:contentDescription="@string/todo"
            android:rotation="70"
            app:srcCompat="@drawable/ic_arrow" />

        <Button
            android:id="@+id/button"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp"
            android:layout_marginBottom="30dp"
            android:onClick="closeTutorial"
            android:text="@string/close" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="150dp"
            android:text="@string/tap_subscription_to_edit"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/subscription_arrow_description"
            android:rotation="-50"
            app:srcCompat="@drawable/ic_arrow" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
